Tweak CSS to ensure fusebox and shadow sit above other elements; float .fusebox left so that, if children are floated, this will float and wrap any.

--- a/css/fusebox.css
+++ b/css/fusebox.css
@@ -4,5 +4,5 @@
   left: 0;
 }
 
-.fusebox { display: none; padding: 10px; }
-.fusebox-container .ui-widget-shadow { position: absolute; z-index: -1;}
+.fusebox { display: none; padding: 10px; z-index: 101; float: left; }
+.fusebox-container .ui-widget-shadow { position: absolute; z-index: 100;}
